Attempt to fix #about on mobile

--- a/main.css
+++ b/main.css
@@ -49,8 +49,9 @@ nav {
     background-color: #CCAAFF;
 }
 
-#about * {
-    bottom: 10em;
+#about ul {
+    padding-bottom: 10px; 
+    margin-bottom: 10px;
 }
 
 #portfolio {
@@ -65,5 +66,5 @@ nav {
 
 #contact a {
     border-radius: 10px 20px;
-    margin-top: 10px; 
+    margin-top: 10px;
 }
